# RAG_AGENT_STUDY

./: .gitignore  Plan.md  README.md  start.txt
QA/: rag_manual_evaluation.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  crew.py  prompts.py  schemas.py
backend/app/api/: routes_chat.py  routes_documents.py  routes_health.py  routes_ingest.py
backend/app/core/: __init__.py  config.py  errors.py  health.py  service_loader.py
backend/app/models/: chat.py  documents.py
backend/app/services/: __init__.py  chunker.py  embeddings.py  health.py  ingestion.py  pdf_loader.py  reranker.py  retrieval.py  vector_store.py
backend/tests/: conftest.py  test_api_routes_and_config.py  test_chunker.py  test_ingestion.py  test_rag_flow.py  test_reranker.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  User.tsx  main.tsx
frontend/src/api/: chat.ts  client.ts  documents.ts
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  DocumentStatus.tsx  ErrorBoundary.tsx  SourceCard.tsx
frontend/src/styles/: index.css
frontend/src/types/: api.ts
