[project]
name = "rag-agent-study-backend"
version = "0.1.0"
description = "FastAPI backend for a local PDF RAG agent"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "crewai>=0.86.0",
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
